# imagefilterpipeline

ImageFilterPipeline/: CMakeLists.txt
ImageFilterPipeline/src/: Exceptions.hpp  Filter.hpp  Image.hpp  ImageLoader.hpp  Pipeline.hpp  main.cpp
ImageFilterPipeline/src/filters/: BrightnessFilter.hpp
ImageFilterPipeline/tests/: test_main.cpp
src/: main.cpp
src/filters/: BlurFilter.hpp  BrightnessFilter.hpp  EdgeDetectionFilter.hpp  GrayscaleFilter.hpp
